--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,126 +1,235 @@
-@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap');
+/*=============== GOOGLE FONTS ===============*/
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&family=Give+You+Glory&family=Macondo&family=Pacifico&family=Patrick+Hand&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap')
 
-*{
-  font-family: 'Comfortaa', cursive;
+
+/*=============== VARIABLES CSS ===============*/
+:root {
+  /*========== Colors ==========*/
+  --first-color: hsl(30, 16%, 50%);
+  --text-color: #fff;
+  --text-color-black: hsl(30, 8%, 15%);
+  --body-color: hsl(30, 100%, 98%);
+
+  /*========== Font and typography ==========*/
+  font-family: "Comfortaa", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: <weight>;
+  font-style: normal;
 }
 
+/* Responsive typography */
+@media screen and (min-width: 1024px) {
+  :root {
+    --h3-font-size: 1.125rem;
+    --small-font-size: .875rem;
+    --smaller-font-size: .813rem;
+  }
+}
 
-body{
+/*=============== BASE ===============*/
+* {
+  box-sizing: border-box;
+  padding: 0;
   margin: 0;
 }
 
-.logo {
-  width: 80px;
-  margin-top: -20px;
+body {
+  font-family: var(--body-font);
+  background-color: var(--body-color);
 }
 
-.nav {
-  display: flex;
-  justify-content: center;
-  padding: 10px 0;
-}
-
-ul{
-  display: flex;
-}
-
-li {
-  list-style-type: none;
-  padding: 20px;
-}
-
-.row{
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.container{
-  width: 20%;
-  position: relative;
-  transition: transform 500ms;
-  display: block;
-}
-
-.container img {
-  width: 100%;
-  opacity: 1;
+img {
+  max-width: 100%;
   height: auto;
-  transition: .5s ease-in-out;
-  display: block;
+    
+footer {
+        
+    }
 }
 
-.row .container:focus,
-.row .container:hover{
-  transform: scale(1.15);
+/*=============== GALLERY ===============*/
+.gallery {
+  height: 100vh;
+  display: grid;
+  align-content: center;
+  justify-content: center;
+}
+
+.gallery_card {
+  position: relative;
+  width: 208px;
+  height: 208px;
+  border-radius: 3rem;
+  margin-left: auto;
+  margin-right: auto;
+  overflow: hidden;
+}
+
+.gallery_img, 
+.gallery_card::after, 
+.gallery_data {
+  position: absolute;
+}
+
+.gallery_img {
+  inset: 0;
+  margin: auto;
+  transition: transform .3s;
+}
+
+.gallery_card::after {
+  content: '';
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(180deg,
+              hsla(0, 0%, 100%, 0) 32%,
+              hsla(0, 0%, 0%, .3) 100%);
+  top: 0;
   z-index: 1;
 }
 
-.middle {
-  background-color: #DE8C8C;
-  transition: .5s ease;
-  opacity: 0;
+.gallery_data {
+  bottom: 1.5rem;
+  left: 1.75rem;
+  z-index: 10;
+}
+
+.gallery_title, 
+.gallery_subtitle {
+  color: var(--text-color);
+  font-weight: 500;
+}
+
+.gallery_title {
+  font-size: var(--h3-font-size);
+}
+
+.gallery_subtitle {
+  font-size: var(--smaller-font-size);
+}
+
+.gallery_overflow {
+  position: relative;
+}
+
+.gallery_thumbnail {
+  position: relative;
+  width: 60px;
+  height: 60px;
+  border-radius: 1.5rem;
+  overflow: hidden;
+  cursor: pointer;
+  margin-left: auto;
+  margin-right: auto;
+  transition: transform .3s;
+}
+
+.gallery_thumbnail-img {
   position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 50%;
-  height: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
+  inset: 0;
+  margin: auto;
 }
 
-.container:hover .middle{
-  opacity: 1;
+/* Swiper class */
+.gallery-cards,
+.gallery-thumbs {
+  width: 260px;
 }
 
-.text {
-  color: #fff;
-  font-size: 16px;
-  padding: 16px 32px;
+.gallery-cards:hover .gallery_img {
+  transform: scale(1.1);
 }
 
-.footer{
-  display: flex;
-  justify-content: center;
-  padding: 30px 0;
+.gallery .swiper-wrapper {
+  padding: 2.5rem 0;
+}
+
+.gallery-thumbs {
+  height: 132px;
+}
+
+/* Active thumbnail */
+.swiper-slide-active .gallery_thumbnail {
+  transform: translateY(-1.25rem) scale(1.2);
+}
+
+/* Rotate thumbnail */
+.swiper-slide-next .gallery_thumbnail {
+  transform: rotate(15deg);
+}
+
+.swiper-slide-prev .gallery_thumbnail {
+  transform: rotate(-15deg);
+}
+
+/* Sliding numbers */
+.swiper-pagination-fraction {
+  font-size: var(--small-font-size);
+  letter-spacing: -1px;
+  font-weight: 500;
+  color: var(--first-color);
+  bottom: 0;
+}
+
+/* Arrow buttons */
+.swiper-button-next::after,
+.swiper-button-prev::after {
+  content: '';
+}
+
+.swiper-button-next,
+.swiper-button-prev {
+  font-size: 1.5rem;
+  color: var(--text-color-black);
+  top: 5.5rem;
+}
+
+.swiper-button-next {
+  right: -1.5rem;
+  transform: rotate(15deg);
+}
+
+.swiper-button-prev {
+  left: -1.5rem;
+  transform: rotate(-15deg);
+}
+
+/* Other swiper settings */
+.gallery-cards::after {
+  content: '';
   width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 10;
 }
 
-a{
-  text-decoration: none;
-  color: black;
+.swiper-horizontal.swiper-css-mode > .swiper-wrapper {
+  scroll-snap-type: initial;
 }
 
-@media only screen and (max-width: 1500px){
-  .text{
-    font-size: 10px;
-    padding: 32px 16px;
-  }
-
-  .footer{
-    position: fixed;
-    bottom: 0;
+/*=============== BREAKPOINTS ===============*/
+/* For small devices */
+@media screen and (max-width: 320px) {
+  .swiper-button-next,
+  .swiper-button-prev {
+    display: none;
   }
 }
 
-@media only screen and (max-width: 800px){
-
-  .container {
-    width: 100%;
+/* For medium devices */
+@media screen and (min-width: 1024px) {
+  .gallery_card {
+    width: 220px;
+    height: 290px;
   }
-
-  .row .container:focus,
-  .row .container:hover{
-    transform: none;
-    z-index: 1;
+  .gallery_thumbnail {
+    width: 65px;
+    height: 65px;
   }
-
-  .footer {
-    position: relative;
+  .gallery-cards,
+  .gallery-thumbs {
+    width: 280px;
   }
-
-  .text{
-    font-size: 32px;
-    padding: 32px 16px;
-  }
-
 }
