--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -36,6 +36,10 @@
   margin: 0;
 }
 
+title{
+   display: none;
+}
+
 .logo {
     width: 100px;
     margin-top: -10px;
@@ -50,7 +54,7 @@
 .nav {
   display: flex;
   justify-content: center;
-  padding: 32px 20px;
+  padding: 32px 10px;
   font-family: 'Pacifico';
   font-size: 45px;
   border-bottom: 8px solid #734954;
@@ -73,16 +77,17 @@ ul{
 
 li {
   list-style-type: none;
-  padding: 10px;
+  padding: 30px;
 }
 
 .footer{
   display: flex;
   justify-content: center;
   font-family: 'Pacifico';
-  padding: 20px 0px;
+  padding: 30px 0px;
   width: 100%;
   color: #734954;
+  font-size: 30px;
   border-top: 8px solid #734954;
   background-color: #D9C2AD;
 }
@@ -291,11 +296,12 @@ img {
     
   .footer {
     position: relative;
+    font-size: 20px;
   }
     
   .nav {
     position: relative;
-    padding: 12px 20px;
+    padding: 12px 0px;
   }
     
   a {
@@ -303,6 +309,15 @@ img {
     text-decoration: none;
     color: #734954;
     font-size: 15px;
+  }
+    
+  ul{
+  display: flex;
+  }
+
+  li {
+  list-style-type: none;
+  padding: 10px;
   }
     
   .logo {
