--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -29,20 +29,24 @@
 }
 
 /*=============== BASE ===============*/
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
 
 title{
    display: none;
 }
 
+
+canvas#confetti {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  left: 0px;
+  z-index: 1000;
+  pointer-events: none;
+}
+
 .main-img {
     width: 150px;
     margin: 20px;
-    display: flex;
     justify-content: center;
     border: 2px solid #734954;
     box-sizing: border-box;
@@ -58,16 +62,10 @@ title{
   
 }
 
-
-canvas#confetti {
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  top: 0px;
-  left: 0px;
-  z-index: 1000;
-  pointer-events: none;
+.fa {
+  color: #bf5065;
 }
+
 
 .button-53 {
   background-color: #734954;
@@ -75,22 +73,19 @@ canvas#confetti {
   box-sizing: border-box;
   color: white;
   display: flex;
-  font-family: ui-sans-serif, system-ui, -apple-system, system-ui, "Segoe UI",
-    Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
-    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: "Segoe UI",
+    "Roboto", "Helvetica Neue", "Arial", "Noto Sans", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-size: 1rem;
-  font-weight: 600;
+  font-weight: 500;
   justify-content: center;
   line-height: 1.75rem;
   padding: 0.75rem 1.65rem;
   position: relative;
   text-align: center;
-  font-size: 16px;
   text-decoration: none #000000 solid;
   text-decoration-thickness: auto;
   width: 100%;
   max-width: 460px;
-  position: relative;
   cursor: pointer;
   user-select: none;
   -webkit-user-select: none;
@@ -114,6 +109,12 @@ canvas#confetti {
 .button-53:hover:after {
   bottom: 2px;
   left: 2px;
+}
+
+.social {
+  display: flex;
+  justify-content: center;
+  color: #bf5065;
 }
 
 span {
@@ -144,7 +145,6 @@ span {
 }
 
 a{
-  display: relative;
   text-decoration: none;
   color: #734954;
 }
@@ -395,8 +395,8 @@ img {
     padding: 12px 0px;
   }
     
+    
   a {
-    display: relative;
     text-decoration: none;
     color: #734954;
     font-size: 15px;
@@ -431,6 +431,18 @@ img {
     
   .button-53 {
     padding: 0.75rem 3rem;
-    font-size: 1\.25rem;
+    font-size: 1.25rem;
   }
+    
+    
+.main-img {
+    width: 150px;
+    margin: 20px;
+    justify-content: center;
+    border: 2px solid #734954;
+    box-sizing: border-box;
+    border-radius: 200px;
+    object-fit: cover
+}
+
 }
