Editing the details

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -29,10 +29,45 @@
 }
 
 /*=============== BASE ===============*/
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
 
-title{
+.fa fa-address-card{
+  color: black;
+}
+
+.nav {
+  display: flex;
+  justify-content: center;
+  padding: 12px 10px;
+  font-family: 'Pacifico';
+  font-size: 45px;
+  border-bottom: 8px solid #734954;
+  background-color: #D9C2AD;
+}
+
+title {
    display: none;
 }
+a {
+  text-decoration: none;
+  color: #734954;
+  width: 100%;
+  font-size: 45px;
+  padding: 0px 0px;
+}
+
+a:hover {
+  text-decoration: none;
+  color: #57373f;
+  width: 100%;
+  font-size: 45px;
+  padding: 0px 0px;
+}
+
 
 
 canvas#confetti {
@@ -52,7 +87,7 @@ canvas#confetti {
     border: 2px solid #734954;
     box-sizing: border-box;
     border-radius: 200px;
-    object-fit: cover
+    object-fit: cover;
 }
 
 .main {
@@ -60,6 +95,7 @@ canvas#confetti {
   display: flex;
   justify-content: center;
   padding: 15px 15px;
+  text-decoration: none;
   
 }
 
@@ -121,6 +157,7 @@ canvas#confetti {
 span {
   font-family: 'Pacifico';  
   margin-top: 30px;
+  color: #734954;
     
 }
 
@@ -135,39 +172,6 @@ span {
     object-fit: cover;
 }
 
-.nav {
-  display: flex;
-  justify-content: center;
-  padding: 32px 10px;
-  font-family: 'Pacifico';
-  font-size: 45px;
-  border-bottom: 8px solid #734954;
-  background-color: #D9C2AD;
-}
-
-a{
-  text-decoration: none;
-  color: #734954;
-}
-
-p {
-  color:black;
-  
-}
-
-a:hover {
-  color: #734954;
-}
-
-ul{
-  display: flex;
-}
-
-li {
-  list-style-type: none;
-  padding: 30px;
-}
-
 .footer{
   display: flex;
   justify-content: center;
@@ -180,211 +184,39 @@ li {
   background-color: #D9C2AD;
 }
 
+p {
+  color: black;
+  
+}
+
+ul{
+  display: flex;
+  text-decoration: none;
+}
+
+li {
+  text-decoration: none;
+  list-style-type: none;
+  padding: 30px;
+}
+
+
 body {
   font-family: var(--body-font);
   font-weight: 100;
-  background-color: var(--body-color);
-}
-
-img {
-  max-width: 100%;
-  height: auto;
-}
-
-/*=============== GALLERY ===============*/
-.gallery {
-  height: 75vh;
-  display: grid;
-  align-content: center;
-  justify-content: center;
-}
-
-.gallery__card {
-  position: relative;
-  width: 300px;
-  height: 300px;
-  border-radius: 3rem;
-  margin-left: auto;
-  margin-right: auto;
-  overflow: hidden;
-}
-
-.gallery__img, 
-.gallery__card::after, 
-.gallery__data {
-  position: absolute;
-}
-
-.gallery__img {
-  inset: 0;
-  margin: auto;
-  transition: transform .3s;
-}
-
-.gallery__card::after {
-  content: '';
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(180deg,
-              hsla(0, 0%, 100%, 0) 32%,
-              hsla(0, 0%, 0%, .3) 100%);
-  top: 0;
-  z-index: 1;
-}
-
-.gallery__data {
-  bottom: 1.5rem;
-  left: 1.75rem;
-  z-index: 10;
-}
-
-.gallery__title, 
-.gallery__subtitle {
-  color: var(--text-color);
-}
-
-.gallery__title {
-  font-size: 25px;
-  font-weight: 100; 
-  font-family: 'Pacifico'
-}
-
-.gallery__subtitle {
-  font-size: 15px;
-  font-family: 'Comfortaa';
-  font-weight: 500; 
-}
-
-.gallery__overflow {
-  position: relative;
-}
-
-.gallery__thumbnail {
-  position: relative;
-  width: 60px;
-  height: 60px;
-  border-radius: 1.5rem;
-  overflow: hidden;
-  cursor: pointer;
-  margin-left: auto;
-  margin-right: auto;
-  transition: transform .3s;
-}
-
-.gallery__thumbnail-img {
-  position: absolute;
-  inset: 0;
-  margin: auto;
-}
-
-/* Swiper class */
-.gallery-cards,
-.gallery-thumbs {
-  width: 536px;
-}
-
-.gallery-cards:hover .gallery__img {
-  transform: scale(1.1);
-}
-
-.gallery .swiper-wrapper {
-  padding: 2.5rem 0;
-}
-
-.gallery-thumbs {
-  height: 150px;
-}
-
-/* Active thumbnail */
-.swiper-slide-active .gallery__thumbnail {
-  transform: translateY(-1.25rem) scale(1.2);
-}
-
-/* Rotate thumbnail */
-.swiper-slide-next .gallery__thumbnail {
-  transform: rotate(15deg);
-}
-
-.swiper-slide-prev .gallery__thumbnail {
-  transform: rotate(-15deg);
-}
-
-/* Sliding numbers */
-.swiper-pagination-fraction {
-  font-size: var(--small-font-size);
-  letter-spacing: -1px;
-  font-weight: 500;
-  color: var(--first-color);
-  bottom: 0;
-}
-
-/* Arrow buttons */
-.swiper-button-next::after,
-.swiper-button-prev::after {
-  content: '';
-}
-
-.swiper-button-next,
-.swiper-button-prev {
-  font-size: 2.5rem;
-  color: #bf5065;
-  top: 5.5rem;
-}
-
-.swiper-button-next {
-  right: -1.5rem;
-  font-size: 0rem;
-  color: #bf5065;
-  transform: rotate(15deg);
-}
-
-.swiper-button-prev {
-  left: -1.5rem;
-  font-size: 0rem;
-  color: #bf5065;
-  transform: rotate(-15deg);
-}
-
-/* Other swiper settings */
-.gallery-cards::after {
-  content: '';
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 10;
-}
-
-.swiper-horizontal.swiper-css-mode > .swiper-wrapper {
-  scroll-snap-type: initial;
+  background-color: #f2dfce;
 }
 
 /*=============== BREAKPOINTS ===============*/
 /* For small devices */
 @media screen and (max-width: 320px) {
-  .swiper-button-next,
-  .swiper-button-prev {
-    display: none;
-  }
+
 }
 
 
 
 /* For medium devices */
 @media screen and (max-width: 1024px) {
-  .gallery__card {
-    width: 280px;
-    height: 280px;
-  }
-  .gallery__thumbnail {
-    width: 65px;
-    height: 65px;
-  }
-  .gallery-cards,
-  .gallery-thumbs {
-    width: 280px;
-  }
     
   .footer {
     position: relative;
@@ -392,24 +224,47 @@ img {
   }
     
   .nav {
-    position: relative;
-    padding: 12px 0px;
+    display: flex;
+    justify-content: center;
+    padding: 12px 10px;
+    width: 100%;
+    font-size: 5px;
+    text-decoration: none;
   }
     
     
-  a {
+   a {
+   text-decoration: none;
+   color: #734954;
+   width: 100%;
+   font-size: 15px;
+   padding: 0px 0px;
+   }
+
+  a:hover {
+  text-decoration: none;
+  color: #57373f;
+  width: 100%;
+  font-size: 15px;
+  padding: 0px 0px;
+  }
+
+    
+  a:link {
     text-decoration: none;
     color: #734954;
     font-size: 15px;
   }
     
   ul{
-  display: flex;
+    display: flex;
+    text-decoration: none;
   }
 
   li {
-  list-style-type: none;
-  padding: 10px;
+   text-decoration: none;
+   list-style-type: none;
+   padding: 10px;
   }
     
   .logo {
@@ -436,14 +291,14 @@ img {
   }
     
     
-.main-img {
+  .main-img {
     width: 150px;
     margin: 20px;
     justify-content: center;
     border: 2px solid #734954;
     box-sizing: border-box;
     border-radius: 200px;
-    object-fit: cover
-}
+    object-fit: cover;
+  }
 
 }
