--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,7 +1,7 @@
 /*=============== GOOGLE FONTS ===============*/
-@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&family=Give+You+Glory&family=Macondo&family=Pacifico&family=Patrick+Hand&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&family=Give+You+Glory&family=Macondo&family=Pacifico&family=Patrick+Hand&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
 
-
+@import url('/font-awesome-4.6.3/css/font-awesome.min.css');
 /*=============== VARIABLES CSS ===============*/
 :root {
   /*========== Colors ==========*/
@@ -9,22 +9,20 @@
   --text-color: #fff;
   --text-color-black: hsl(30, 8%, 15%);
   --body-color: #f2dfce;
-  --swiper-navigation-color: #BF5065;
+  --swiper-navigation-color: #bf5065;
 
   /*========== Font and typography ==========*/
-  --body-font: 'Comfortaa';
-  --small-font-size: .813rem;
-  --smaller-font-size: .75rem;
+  --body-font: "Comfortaa";
+  --small-font-size: 0.813rem;
+  --smaller-font-size: 0.75rem;
 }
-
-
 
 /* Responsive typography */
 @media screen and (min-width: 1024px) {
   :root {
     --h3-font-size: 1.125rem;
-    --small-font-size: .875rem;
-    --smaller-font-size: .813rem;
+    --small-font-size: 0.875rem;
+    --smaller-font-size: 0.813rem;
   }
 }
 
@@ -35,42 +33,71 @@
   margin: 0;
 }
 
-.fa fa-address-card{
-  color: black;
-}
-
 .nav {
-  display: flex;
-  justify-content: center;
-  padding: 12px 10px;
-  font-family: 'Pacifico';
+  text-decoration: none;
+  justify-content: center !important;
+  align-content: center !important;
+  width: 100%;
+  padding: 0px 10px;
+  font-family: "Pacifico";
   font-size: 45px;
   border-bottom: 8px solid #734954;
-  background-color: #D9C2AD;
+  background-color: #d9c2ad;
 }
 
 title {
-   display: none;
+  display: none;
 }
-a {
-  text-decoration: none;
-  color: #734954;
+
+.footer {
+  display: relative;
+  justify-content: center !important;
+  align-content: center !important;
+  font-family: "Pacifico";
+  padding: 30px 0px;
   width: 100%;
-  font-size: 45px;
+  color: #734954 !important;
+  font-size: 30px;
+  border-top: 8px solid #734954;
+  background-color: #d9c2ad;
+}
+
+.footer p {
+  font-family: "Pacifico";
+  justify-content: center !important;
+  color: #734954 !important;
+  font-size: 30px;
+  text-align: center;
+}
+
+
+a {
+  text-decoration: none !important;
+  color: #734954 !important;
+  width: 100%;
   padding: 0px 0px;
 }
 
 a:hover {
   text-decoration: none;
-  color: #57373f;
+  color: #40282e!important;
   width: 100%;
-  font-size: 45px;
   padding: 0px 0px;
 }
 
 
+.logo {
+    width: 100px;
+    margin-top: -10px;
+    display: flex;
+    justify-content: center;
+    border: 2px solid #734954;
+    box-sizing: border-box;
+    border-radius: 200px;
+    object-fit: cover;
+}
 
-canvas#confetti {
+#confetti {
   position: fixed;
   width: 100%;
   height: 100%;
@@ -81,13 +108,11 @@ canvas#confetti {
 }
 
 .main-img {
-    width: 150px;
-    margin: 20px;
-    justify-content: center;
-    border: 2px solid #734954;
-    box-sizing: border-box;
-    border-radius: 200px;
-    object-fit: cover;
+  width: 150px;
+  margin: 20px;
+  justify-content: center;
+  border: 2px solid #734954;
+  border-radius: 200px;
 }
 
 .main {
@@ -96,13 +121,55 @@ canvas#confetti {
   justify-content: center;
   padding: 15px 15px;
   text-decoration: none;
-  
 }
 
 .fa {
   color: #bf5065;
 }
 
+p {
+  color: black;
+}
+
+ul {
+  display: flex;
+  text-decoration: none;
+  justify-content: center;
+}
+
+li {
+  text-decoration: none;
+  list-style-type: none;
+  padding: 30px;
+}
+
+.social {
+  display: flex;
+  justify-content: center;
+  color: #bf5065;
+}
+
+span {
+  font-family: "Pacifico";
+  margin-top: 30px;
+  color: #734954;
+}
+
+.logo {
+  width: 100px;
+  margin-top: -10px;
+  display: flex;
+  justify-content: center;
+  border: 2px solid #734954;
+  box-sizing: border-box;
+  border-radius: 200px;
+  object-fit: cover;
+}
+
+body {
+  font-weight: 100;
+  background-color: #f2dfce;
+}
 
 .button-53 {
   background-color: #734954;
@@ -110,8 +177,8 @@ canvas#confetti {
   box-sizing: border-box;
   color: white;
   display: flex;
-  font-family: "Segoe UI",
-    "Roboto", "Helvetica Neue", "Arial", "Noto Sans", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: "Segoe UI", "Roboto", "Helvetica Neue", "Arial", "Noto Sans",
+    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-size: 1rem;
   font-weight: 500;
   justify-content: center;
@@ -120,12 +187,10 @@ canvas#confetti {
   position: relative;
   text-align: center;
   text-decoration: none #000000 solid;
-  text-decoration-thickness: auto;
   width: 100%;
   max-width: 460px;
   cursor: pointer;
   user-select: none;
-  -webkit-user-select: none;
   touch-action: manipulation;
 }
 
@@ -148,148 +213,92 @@ canvas#confetti {
   left: 2px;
 }
 
-.social {
-  display: flex;
-  justify-content: center;
-  color: #bf5065;
-}
-
-span {
-  font-family: 'Pacifico';  
-  margin-top: 30px;
-  color: #734954;
-    
-}
-
-.logo {
-    width: 100px;
-    margin-top: -10px;
-    display: flex;
-    justify-content: center;
-    border: 2px solid #734954;
-    box-sizing: border-box;
-    border-radius: 200px;
-    object-fit: cover;
-}
-
-.footer{
-  display: flex;
-  justify-content: center;
-  font-family: 'Pacifico';
-  padding: 30px 0px;
-  width: 100%;
-  color: #734954;
-  font-size: 30px;
-  border-top: 8px solid #734954;
-  background-color: #D9C2AD;
-}
-
-p {
-  color: black;
-  
-}
-
-ul{
-  display: flex;
-  text-decoration: none;
-}
-
-li {
-  text-decoration: none;
-  list-style-type: none;
-  padding: 30px;
-}
-
-
-body {
-  font-family: var(--body-font);
-  font-weight: 100;
-  background-color: #f2dfce;
-}
-
-/*=============== BREAKPOINTS ===============*/
-/* For small devices */
-@media screen and (max-width: 320px) {
-
-}
-
-
-
 /* For medium devices */
 @media screen and (max-width: 1024px) {
     
-  .footer {
-    position: relative;
-    font-size: 20px;
-  }
-    
+  
   .nav {
-    display: flex;
-    justify-content: center;
-    padding: 12px 10px;
+    position: relative;
+    padding: 3px 30px;
     width: 100%;
-    font-size: 5px;
-    text-decoration: none;
   }
     
-    
-   a {
-   text-decoration: none;
-   color: #734954;
-   width: 100%;
-   font-size: 15px;
-   padding: 0px 0px;
-   }
+.footer {
+  display: relative;
+  justify-content: center !important;
+  font-family: "Pacifico";
+  padding: 30px 10px;
+  width: 100%;
+  color: #734954 !important;
+  font-size: 20px;
+  border-top: 8px solid #734954;
+  background-color: #d9c2ad;
+  align-content: center !important;
+}
+
+  a {
+    text-decoration: none;
+    color: #734954;
+    width: 100%;
+    font-size: 15px;
+    padding: 0px 0px;
+  }
 
   a:hover {
-  text-decoration: none;
-  color: #57373f;
-  width: 100%;
-  font-size: 15px;
-  padding: 0px 0px;
+    text-decoration: none;
+    color: #57373f;
+    width: 100%;
+    font-size: 15px;
+    padding: 0px 0px;
   }
 
-    
   a:link {
     text-decoration: none;
     color: #734954;
     font-size: 15px;
   }
-    
-  ul{
+
+  ul {
     display: flex;
     text-decoration: none;
+    justify-content: center;
   }
 
   li {
-   text-decoration: none;
-   list-style-type: none;
-   padding: 10px;
+    text-decoration: none;
+    list-style-type: none;
+    color: #734954;
+    padding: 10px;
   }
-    
-  .logo {
-    width: 50px;
-    height: 50px;
-    margin-top: 20px;
-    display: flex;
-    object-fit: cover;
-    justify-content: center;
-    border: 2px solid #734954;
-    box-sizing: border-box;
-    border-radius: 20px;
-  }
-    
-  .text{
+
+  .text {
     font-size: 32px;
     padding: 32px 16px;
     margin-top: 10px;
   }
-    
+
   .button-53 {
     padding: 0.75rem 3rem;
     font-size: 1.25rem;
+  }    
+
+  .logo {
+    width: 50px;
+    height: 50px;
+    margin-top: 15px;
+    display: flex;
+    justify-content: center;
+    border: 2px solid #734954;
+    border-radius: 20px;
   }
-    
+
+.footer p {
+  font-family: "Pacifico";
+  justify-content: center !important;
+  color: #734954 !important;
+  font-size: 19px;
+  text-align: center;
+}
     
   .main-img {
     width: 150px;
@@ -300,5 +309,4 @@ body {
     border-radius: 200px;
     object-fit: cover;
   }
-
 }
