--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,371 +1,388 @@
 /*=============== GOOGLE FONTS ===============*/
 @import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&family=Give+You+Glory&family=Macondo&family=Pacifico&family=Patrick+Hand&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Anonymous+Pro:ital,wght@0,400;0,700;1,400;1,700&family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Hachi+Maru+Pop&family=Itim&family=Lilita+One&display=swap');
 
-@import url('/font-awesome-4.6.3/css/font-awesome.min.css');
 /*=============== VARIABLES CSS ===============*/
 :root {
-  /*========== Colors ==========*/
-  --first-color: hsl(30, 16%, 50%);
-  --text-color: #fff;
-  --text-color-black: hsl(30, 8%, 15%);
-  --body-color: #f2dfce;
-  --swiper-navigation-color: #bf5065;
+    /*========== Colors ==========*/
+    --first-color: #a57f60;
+    --text-color: #fff;
+    --text-color-black: hsl(30, 8%, 15%);
+    --body-color: #d9c2ad;
+    --swiper-navigation-color: #bf5065;
 
-  /*========== Font and typography ==========*/
-  --body-font: "Comfortaa";
-  --small-font-size: 0.813rem;
-  --smaller-font-size: 0.75rem;
+    /*========== Font and typography ==========*/
+    --body-font: "Comfortaa";
+    --small-font-size: 0.813rem;
+    --smaller-font-size: 0.75rem;
 }
 
 /* Responsive typography */
 @media screen and (min-width: 1024px) {
-  :root {
-    --h3-font-size: 1.125rem;
-    --small-font-size: 0.875rem;
-    --smaller-font-size: 0.813rem;
-  }
+    :root {
+        --h3-font-size: 1.125rem;
+        --small-font-size: 0.875rem;
+        --smaller-font-size: 0.813rem;
+    }
 }
 
 /*=============== BASE ===============*/
 * {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-  center{
-    width: 100%;
-    height: 100%;
+    box-sizing: content-box;
     padding: 0;
     margin: 0;
-  }
+}
+
+.main {
+    display: flex;
+    justify-content: center !important;
+    align-content: center !important;
+    width: 100%;
+    height: 100%;
+    max-height: 800px;
+    max-width: 1000px;
+    padding: 0;
+    margin: auto;
+    background-color: #d9c2ad;
+    padding: 25px 15px;
+}
+
+.column .img {
+    width: 33.33%;
+}
 
 .nav {
-  text-decoration: none;
-  justify-content: center !important;
-  align-content: center !important;
-  width: 100%;
-  padding: 0px 0px;
-  font-family: "Pacifico";
-  font-size: 45px;
-  border-bottom: 8px solid #734954;
-  background-color: #d9c2ad;
+    text-decoration: none;
+    justify-content: center !important;
+    align-content: center !important;
+    width: 100%;
+    display: block;
+    padding: 0px 0px;
+    font-family: "Itim";
+    font-size: 45px;
+    border-bottom: 8px solid #a57f60;
+    background-color: #d9c2ad;
 }
 
 .nav ul {
-  justify-content: center !important;
-  align-content: center !important;
-  width: 100%;
-    
+    justify-content: center !important;
+    align-content: center !important;
+    width: 100%;
+}
+
+.nav .logo {
+    width: 100px;
+    margin-top: -10px;
+    justify-content: center;
+    border: 2px solid #906d51;
+    box-sizing: border-box;
+    border-radius: 200px;
 }
 
 title {
-  display: none;
+    display: flex;
+    justify-content: center !important;
+    align-content: center !important;
+}
+
+h3 {
+    display: flex;
+    justify-content: center !important;
+    align-content: center !important;
+
+}
+
+p {
+    color: #906D51;
+    font-size: 20px;
+    padding: 5px 0px;
+    justify-content: center !important;
+    align-content: center !important;
+    text-align: center !important;
 }
 
 .footer {
-  display: relative;
-  justify-content: center !important;
-  align-content: center !important;
-  font-family: "Pacifico";
-  padding: 30px 0px;
-  width: 100%;
-  color: #734954 !important;
-  font-size: 30px;
-  border-top: 8px solid #734954;
-  background-color: #d9c2ad;
+    display: flex;
+    justify-content: center !important;
+    align-content: center !important;
+    font-family: "Itim";
+    padding: 20px 0px;
+    width: 100%;
+    color: #a57f60 !important;
+    font-size: 30px;
+    border-top: 8px solid #a57f60;
+    background-color: #d9c2ad;
 }
 
 .footer p {
-  font-family: "Pacifico";
-  justify-content: center !important;
-  color: #734954 !important;
-  font-size: 30px;
-  text-align: center;
+    font-family: "Itim";
+    justify-content: center !important;
+    color: #906d51 !important;
+    font-size: 30px;
+    text-align: center;
 }
 
 
 a {
-  text-decoration: none !important;
-  color: #734954 !important;
-  width: 100%;
-  padding: 0px 0px;
+    text-decoration: none !important;
+    color: #a57f60 !important;
+    width: 100%;
+    padding: 0px 0px;
 }
 
 a:hover {
-  text-decoration: none;
-  color: #40282e!important;
-  width: 100%;
-  padding: 0px 0px;
-}
-
-
-.logo {
-    width: 100px;
-    margin-top: -10px;
-    display: flex;
-    justify-content: center;
-    border: 2px solid #734954;
-    box-sizing: border-box;
-    border-radius: 200px;
-    object-fit: cover;
+    text-decoration: none;
+    color: #906d51 !important;
+    width: 100%;
+    padding: 0px 0px;
 }
 
 #confetti {
-  position: fixed;
-  height: 100%;
-  width: 100%;
-  
-  left: 0px;
-  top: 75px;
-  z-index: 1000;
-  pointer-events: none;
+    position: fixed;
+    height: 100%;
+    width: 100%;
+
+    left: 0px;
+    top: 0px;
+    z-index: 1000;
+    pointer-events: none;
 }
 
 .main-img {
-  width: 150px;
-  margin: 20px;
-  justify-content: center;
-  border: 2px solid #734954;
-  border-radius: 200px;
-}
-
-.main {
-  background-color: #f2dfce;
-  display: flex;
-  justify-content: center;
-  text-decoration: none;
-  padding: 25px 15px;
+    width: 150px;
+    margin: 20px;
+    justify-content: center;
+    border: 2px solid #906d51;
+    border-radius: 200px;
 }
 
 .fa {
-  color: #bf5065;
-  font-size: 60px !important;
-  display: flex;
-  text-decoration: none;
-}
-    
-.fa:hover{
-  color: #734954 !important;
-  font-size: 60px;
-  display: flex;
-  text-decoration: none;
+    color: #bf5065;
+    font-size: 60px !important;
+    display: block;
+    text-decoration: none;
 }
 
-p {
-  color: black;
+.fa:hover {
+    color: #AB3521 !important;
+    font-size: 60px;
+    text-decoration: none;
 }
+
 
 ul {
-  display: flex;
-  text-decoration: none;
-  justify-content: center;
+    display: flex;
+    text-decoration: none;
+    justify-content: center;
+
 }
 
 li {
-  text-decoration: none;
-  list-style-type: none;
-  padding: 30px;
+    text-decoration: none;
+    list-style-type: none;
+    padding: 30px;
+    margin-top: -20px;
+    margin-bottom: -20px;
 }
 
 .social {
-  display: flex;
-  justify-content: center;
-  color: #bf5065;
+    display: flex;
+    justify-content: center;
+    color: #bf5065;
 }
 
 span {
-  font-family: "Pacifico";
-  margin-top: 30px;
-  color: #734954;
+    font-family: "Itim";
+    margin-top: 30px;
+    font-size: 35px;
+    color: #906D51;
 }
 
-.logo {
-  width: 100px;
-  margin-top: -10px;
-  display: flex;
-  justify-content: center;
-  border: 2px solid #734954;
-  box-sizing: border-box;
-  border-radius: 200px;
-  object-fit: cover;
-}
 
 body {
-  font-weight: 100;
-  background-color: #f2dfce;
+    font-weight: 100;
+    background-color: #d9c2ad;
+}
+
+.but {
+    display: flex;
+    justify-content: center !important;
+    align-content: center !important;
+
 }
 
 .button-53 {
-  background-color: #734954;
-  border: 0 solid #e5e7eb;
-  box-sizing: border-box;
-  color: white;
-  display: flex;
-  font-family: "Segoe UI", "Roboto", "Helvetica Neue", "Arial", "Noto Sans",
+    background-color: #906D51;
+    border: 0 solid #e5e7eb;
+    box-sizing: border-box;
+    color: white;
+    display: flex;
+    justify-content: center !important;
+    align-content: center !important;
+    font-family: "Segoe UI", "Roboto", "Helvetica Neue", "Arial", "Noto Sans",
     "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  font-size: 1rem;
-  font-weight: 500;
-  justify-content: center;
-  line-height: 1.75rem;
-  padding: 0.75rem 1.65rem;
-  position: relative;
-  text-align: center;
-  text-decoration: none #000000 solid;
-  width: 100%;
-  max-width: 460px;
-  cursor: pointer;
-  user-select: none;
-  touch-action: manipulation;
+    font-size: 1rem;
+    font-weight: 500;
+    line-height: 1.75rem;
+    padding: 0.75rem 1.65rem;
+    position: relative;
+    text-align: center;
+    text-decoration: none #000000 solid;
+    width: 100%;
+    max-width: 400px;
+    cursor: pointer;
+    user-select: none;
+    touch-action: manipulation;
 }
 
 .button-53:focus {
-  outline: 0;
+    outline: 0;
 }
 
 .button-53:after {
-  content: "";
-  position: absolute;
-  border: 1px solid #000000;
-  bottom: 4px;
-  left: 4px;
-  width: calc(100% - 1px);
-  height: calc(100% - 1px);
+    content: "";
+    position: absolute;
+    border: 1px solid #000000;
+    bottom: 4px;
+    left: 4px;
+    width: calc(100% - 1px);
+    height: calc(100% - 1px);
 }
 
 .button-53:hover:after {
-  bottom: 2px;
-  left: 2px;
+    bottom: 2px;
+    left: 2px;
 }
 
 /* For medium devices */
 @media screen and (max-width: 1024px) {
-    
 
-  center{
-    width: 100%;
-    height: 100%;
+
+    center {
+        width: 100%;
+        height: 100%;
     }
-    
-  .nav {
-    position: relative;
-    padding: 3px 20px;
-    width: 100%;
-  }
-    
-.footer {
-  display: relative;
-  justify-content: center !important;
-  font-family: "Pacifico";
-  padding: 30px 10px;
-  width: 100%;
-  height: 100%;
-  color: #734954 !important;
-  font-size: 20px;
-  border-top: 8px solid #734954;
-  background-color: #d9c2ad;
-  align-content: center !important;
-}
-    
-    
+
+    .nav {
+        position: relative;
+        padding: 3px 20px;
+        width: 100%;
+    }
+
+    .footer {
+        display: relative;
+        justify-content: center !important;
+        font-family: "Itim";
+        padding: 30px 10px;
+        width: 100%;
+        height: 100%;
+        color: #906D51 !important;
+        font-size: 20px;
+        border-top: 8px solid #906D51;
+        background-color: #f2dfce;
+        align-content: center !important;
+    }
+
+
     #confetti {
-      position: fixed;
-      height: 100%;
-      width: 100%;
-      left: 0px;
-      top: 25px;
-      z-index: 1000;
-      pointer-events: none;
+        position: fixed;
+        height: 100%;
+        width: 100%;
+        left: 0px;
+        top: 25px;
+        z-index: 1000;
+        pointer-events: none;
     }
 
-  a {
-    text-decoration: none;
-    color: #734954;
-    width: 100%;
-    font-size: 15px;
-    padding: 0px 0px;
-  }
+    a {
+        text-decoration: none;
+        color: #a57f60;
+        width: 100%;
+        font-size: 15px;
+        padding: 0px 0px;
+    }
 
-  a:hover {
-    text-decoration: none;
-    color: #57373f;
-    width: 100%;
-    font-size: 15px;
-    padding: 0px 0px;
-  }
+    a:hover {
+        text-decoration: none;
+        color: #906D51;
+        width: 100%;
+        font-size: 15px;
+        padding: 0px 0px;
+    }
 
-  a:link {
-    text-decoration: none;
-    color: #734954;
-    font-size: 15px;
-  }
+    a:link {
+        text-decoration: none;
+        color: #906D51;
+        font-size: 15px;
+    }
 
-  ul {
-    display: flex;
-    text-decoration: none;
-    justify-content: center;
-  }
+    ul {
+        display: flex;
+        text-decoration: none;
+        justify-content: center;
+    }
 
-  li {
-    text-decoration: none;
-    list-style-type: none;
-    color: #734954;
-    padding: 10px;
-  }
+    li {
+        text-decoration: none;
+        list-style-type: none;
+        color: #906D51;
+        padding: 10px;
+    }
 
-  .text {
-    font-size: 32px;
-    padding: 32px 16px;
-    margin-top: 10px;
-  }
+    .text {
+        font-size: 32px;
+        padding: 32px 16px;
+        margin-top: 10px;
+    }
 
-  .button-53 {
-    padding: 0.75rem 3rem;
-    font-size: 1.25rem;
-  }    
+    .button-53 {
+        padding: 0.75rem 3rem;
+        font-size: 1.25rem;
+    }
 
-  .logo {
-    width: 50px;
-    height: 50px;
-    margin-top: 15px;
-    display: flex;
-    justify-content: center;
-    border: 2px solid #734954;
-    border-radius: 20px;
-  }
+    .logo {
+        width: 50px;
+        height: 50px;
+        margin-top: 15px;
+        display: flex;
+        justify-content: center;
+        border: 2.2px solid #906D51;
+        border-radius: 20px;
+    }
+
     .main {
-     padding: 60px 15px;
+        padding: 60px 15px;
     }
 
-.footer p {
-  font-family: "Pacifico";
-  justify-content: center !important;
-  color: #734954 !important;
-  font-size: 19px;
-  text-align: center;
-}
-    
-.fa {
-  color: #bf5065;
-  font-size: 40px !important;
-  display: flex;
-  text-decoration: none;
-}
-    
-.fa:hover{
-  color: #734954 !important;
-  font-size: 40px;
-  display: flex;
-  text-decoration: none;
-}
-    
-  .main-img {
-    width: 150px;
-    margin: 20px;
-    justify-content: center;
-    border: 2px solid #734954;
-    box-sizing: border-box;
-    border-radius: 200px;
-    object-fit: cover;
-  }
+    .footer p {
+        font-family: "Itim";
+        justify-content: center !important;
+        color: #a57f60 !important;
+        font-size: 19px;
+        text-align: center;
+    }
+
+    .fa {
+        color: #bf5065;
+        font-size: 40px !important;
+        display: flex;
+        text-decoration: none;
+    }
+
+    .fa:hover {
+        color: #AB3521 !important;
+        font-size: 40px;
+        display: flex;
+        text-decoration: none;
+    }
+
+    .main-img {
+        width: 150px;
+        margin: 20px;
+        justify-content: center;
+        border: 2px solid #AB3521;
+        box-sizing: border-box;
+        border-radius: 200px;
+        object-fit: cover;
+    }
 }
